--- a/doc/templates/layout.html
+++ b/doc/templates/layout.html
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" href="<__root__>js/CodeMirror/lib/codemirror.css">
 <link rel="stylesheet" href="<__root__>js/CodeMirror/theme/mdn-like.css">
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="<__root__>js/CodeMirror/lib/codemirror.js"></script>
 <script src="<__root__>js/CodeMirror/mode/clike/clike.js"></script>
 <script src="<__root__>js/CodeMirror/addon/selection/active-line.js"></script>
@@ -179,6 +180,24 @@ function toggleNextRow() {
 <dt><span class="section"><a href="di/acknowledgements.html">Acknowledgements</a></span></dt>
 <dt><span class="section"><a href="di/references.html">References</a></span></dt>
 </dl>
+
+<script>
+    $('dt').each(function() {
+      var $dt = $(this);
+      $dt.addClass($dt.next().is('dd') ? 'collapsed' : 'none');
+    });
+
+    <!--$('dd').addClass('invisible');-->
+
+    $('dt').click(function () {
+          var $dt = $(this);
+          if ($dt.next().is('dd')) {
+            $dt.next().toggleClass('invisible');
+            $dt.toggleClass('expanded', 'collapsed');
+          }
+    });
+</script>
+
 </div>
 </div>
 
