--- a/doc/templates/layout.html
+++ b/doc/templates/layout.html
@@ -38,6 +38,12 @@ function toggleNextRow() {
   	}
 }
 </script>
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'krzysztof-jusiak/di'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 
 <body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF" onload="hideRows()">
 <table cellpadding="2" width="100%"><tr>
@@ -72,7 +78,6 @@ function toggleNextRow() {
 <a href="https://ci.appveyor.com/project/krzysztof-jusiak/di" target="_blank"><span class="inlinemediaobject"><img src="https://img.shields.io/appveyor/ci/krzysztof-jusiak/di/cpp14.svg?label=windows"></span></a>
 <a href="https://coveralls.io/r/krzysztof-jusiak/di?branch=cpp14" target="_blank"><span class="inlinemediaobject"><img src="http://img.shields.io/coveralls/krzysztof-jusiak/di/cpp14.svg"></span></a>
 <a href="http://github.com/krzysztof-jusiak/di/issues" target="_blank"><span class="inlinemediaobject"><img src="https://img.shields.io/github/issues/krzysztof-jusiak/di.svg"></span></a>
-<a href="https://gitter.im/krzysztof-jusiak/di" target="_blank"><span class="inlinemediaobject"><img src="https://img.shields.io/badge/gitter-join%20chat%20%E2%86%92-brightgreen.svg"></span></a>
 <hr />
 <script>
   (function() {
