--- a/boost-modern/themes/boost/css/boostbook.css
+++ b/boost-modern/themes/boost/css/boostbook.css
@@ -773,6 +773,7 @@ span.silver { color: silver; } /* lighter gray */
 span.gray { color: #808080; } /* light gray */
 
 table {
+  table-layout: fixed;
   border:1px solid #C0C0C0;
   border-collapse:collapse;
   margin-bottom: 20px;
